<resources>
    <string name="app_name">MovieSearch</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_add_movie">AddMovie</string>


    <string name="line_title">Title</string>
    <string name="line_year">Year</string>
    <string name="line_released">Released</string>
    <string name="line_runtime">Runtime</string>
    <string name="line_genre">Genre</string>
    <string name="line_director">Director</string>
    <string name="line_writer">Writer</string>
    <string name="line_actors">Actors</string>
    <string name="line_plot">Plot</string>
    <string name="line_language">Language</string>
    <string name="line_country">Country</string>
    <string name="line_awards">Awards</string>

    <string name="add_manually">Manually</string>
    <string name="search">Search!</string>


    //MainActivity xml//
    <string name="home_title_lib">Your Movies Library</string>

    //Add Movies xml//
    <string name="search_movie_title">Search Movie By Title</string>
    <string name="title_activity_view_movie">ViewMovie</string>
    <string name="title_activity_edit_movie">EditMovie</string>
    <string name="title_activity_movie_pop">MoviePop</string>
    <string name="url_image">Image URL</string>


    <string name="banner_ad_unit_id">ca-app-pub-7305407705541355/4197777627</string>



    //menu//
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="Edit">Edit</string>
    <string name="about">About</string>
    <string name="share">Share</string>
    <string name="exit">Exit</string>



</resources>
