<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_view_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.app.dorsh.imovies.ui.ViewMovie"
    tools:showIn="@layout/activity_view_movie"
    android:background="@color/BackgroundPage">

<android.support.constraint.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:src="@drawable/mposter"
        android:id="@+id/mPoster"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.16000003"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="centerCrop"
        android:elevation="0dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp" />

    <TextView
        android:text="@string/line_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mTitle"
        android:textColor="#ffc400"
        android:textSize="18sp"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:text="@string/line_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mYear"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mTitle"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mGenre"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mYear" />

    <TextView
        android:text="@string/line_released"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mReleased"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mGenre"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_runtime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mRuntime"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mReleased"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_actors"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mActors"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mRuntime"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_language"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mLanguage"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mActors"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_country"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mCountry"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mLanguage"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_director"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mDirector"
        android:textColor="@color/ViewLineINFO"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mCountry"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_writer"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mWriter"
        android:textColor="@color/ViewLineINFO"
        app:layout_constraintLeft_toLeftOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/mPoster"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_awards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mAwards"
        android:maxLines="2"
        android:ellipsize="end"
        android:textColor="@color/ViewLineINFO"
        app:layout_constraintHorizontal_bias="1.0"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mPoster"
        app:layout_constraintTop_toBottomOf="@+id/mDirector"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:text="@string/line_plot"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:id="@+id/mPlot"
        android:textColor="@color/ViewLineINFO"
        android:textStyle="italic"
        android:inputType="textMultiLine"
        android:background="#636363"
        android:paddingBottom="10dp"
        android:padding="10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/youtube_fragment"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_begin="207dp"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="0dp"
        tools:layout_editor_absoluteX="207dp" />

    <ImageButton
        android:layout_width="40dp"
        app:srcCompat="@drawable/ic_favorite"
        android:id="@+id/mFAV"
        android:background="#00ffffff"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        android:layout_marginBottom="8dp"
        android:scaleType="fitXY"
        android:layout_height="40dp"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp" />

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        app:srcCompat="@drawable/ic_unwatch"
        android:id="@+id/mWATCH"
        android:background="#00ffffff"
        app:layout_constraintHorizontal_bias="0.95"
        app:layout_constraintVertical_bias="0.0"
        android:scaleType="fitXY"
        android:layout_marginStart="32dp"
        app:layout_constraintLeft_toRightOf="@+id/mFAV"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        android:layout_marginTop="8dp" />

    <RatingBar
        android:theme="@style/RatingBar"
        android:id="@+id/mRAT"
        android:rating="4"
        android:stepSize="0.5"
        android:numStars="5"
        android:scaleX="0.7"
        android:scaleY="0.7"
        android:transformPivotX="5dp"
        android:paddingTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:isIndicator="false"
        app:layout_constraintVertical_bias="1.0"
        app:layout_constraintHorizontal_bias="0.15"
        android:layout_marginStart="8dp"
        app:layout_constraintLeft_toRightOf="@+id/mWATCH"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        app:layout_constraintGuide_begin="41dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="41dp"
        tools:layout_editor_absoluteX="0dp" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        app:layout_constraintGuide_begin="378dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="378dp"
        tools:layout_editor_absoluteX="0dp" />

    <fragment
        android:name="com.google.android.youtube.player.YouTubePlayerSupportFragment"
        android:id="@+id/youtube_fragment"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2"
        android:layout_marginTop="24dp"
        app:layout_constraintHorizontal_bias="0.0" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline4"
        app:layout_constraintGuide_begin="318dp"
        android:orientation="horizontal"
        tools:layout_editor_absoluteY="318dp"
        tools:layout_editor_absoluteX="0dp" />

</android.support.constraint.ConstraintLayout>
</ScrollView>
